@@ -14,8 +14,7 @@ import org.elasticsearch.cluster.AckedClusterStateUpdateTask;
 import org.elasticsearch.cluster.ClusterChangedEvent;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateListener;
-import org.elasticsearch.cluster.ack.ClusterStateUpdateResponse;
-import org.elasticsearch.cluster.metadata.MetaData;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.component.AbstractLifecycleComponent;
@@ -39,18 +38,18 @@ import org.elasticsearch.xpack.core.scheduler.SchedulerEngine;
 
 import java.time.Clock;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
- * Service responsible for managing {@link LicensesMetaData}.
+ * Service responsible for managing {@link LicensesMetadata}.
  * <p>
  * On the master node, the service handles updating the cluster state when a new license is registered.
  * It also listens on all nodes for cluster state updates, and updates {@link XPackLicenseState} when
@@ -59,19 +58,23 @@ import java.util.concurrent.atomic.AtomicReference;
 public class LicenseService extends AbstractLifecycleComponent implements ClusterStateListener, SchedulerEngine.Listener {
     private static final Logger logger = LogManager.getLogger(LicenseService.class);
 
-    public static final Setting<String> SELF_GENERATED_LICENSE_TYPE = new Setting<>("xpack.license.self_generated.type",
-            (s) -> "basic", (s) -> {
-        if (SelfGeneratedLicense.validSelfGeneratedType(s)) {
-            return s;
-        } else {
-            throw new IllegalArgumentException("Illegal self generated license type [" + s + "]. Must be trial or basic.");
-        }
+    public static final Setting<License.LicenseType> SELF_GENERATED_LICENSE_TYPE = new Setting<>("xpack.license.self_generated.type",
+        (s) -> License.LicenseType.BASIC.getTypeName(), (s) -> {
+        final License.LicenseType type = License.LicenseType.parse(s);
+        return SelfGeneratedLicense.validateSelfGeneratedType(type);
     }, Setting.Property.NodeScope);
+
+    static final List<License.LicenseType> ALLOWABLE_UPLOAD_TYPES = getAllowableUploadTypes();
+
+    public static final Setting<List<License.LicenseType>> ALLOWED_LICENSE_TYPES_SETTING = Setting.listSetting("xpack.license.upload.types",
+        ALLOWABLE_UPLOAD_TYPES.stream().map(License.LicenseType::getTypeName).collect(Collectors.toUnmodifiableList()),
+        License.LicenseType::parse, LicenseService::validateUploadTypesSetting, Setting.Property.NodeScope);
 
     // pkg private for tests
     static final TimeValue NON_BASIC_SELF_GENERATED_LICENSE_DURATION = TimeValue.timeValueHours(30 * 24);
 
-    static final Set<String> VALID_TRIAL_TYPES = new HashSet<>(Arrays.asList("trial", "platinum", "gold"));
+    static final Set<License.LicenseType> VALID_TRIAL_TYPES = Set.of(
+        License.LicenseType.GOLD, License.LicenseType.PLATINUM, License.LicenseType.ENTERPRISE, License.LicenseType.TRIAL);
 
     /**
      * Duration of grace period after a license has expired
@@ -79,7 +82,7 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
     static final TimeValue GRACE_PERIOD_DURATION = days(7);
 
     public static final long BASIC_SELF_GENERATED_LICENSE_EXPIRATION_MILLIS =
-            XPackInfoResponse.BASIC_SELF_GENERATED_LICENSE_EXPIRATION_MILLIS;
+        XPackInfoResponse.BASIC_SELF_GENERATED_LICENSE_EXPIRATION_MILLIS;
 
     private final Settings settings;
 
@@ -108,16 +111,23 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
     private List<ExpirationCallback> expirationCallbacks = new ArrayList<>();
 
     /**
+     * Which license types are permitted to be uploaded to the cluster
+     * @see #ALLOWED_LICENSE_TYPES_SETTING
+     */
+    private final List<License.LicenseType> allowedLicenseTypes;
+
+    /**
      * Max number of nodes licensed by generated trial license
      */
     static final int SELF_GENERATED_LICENSE_MAX_NODES = 1000;
+    static final int SELF_GENERATED_LICENSE_MAX_RESOURCE_UNITS = SELF_GENERATED_LICENSE_MAX_NODES;
 
     public static final String LICENSE_JOB = "licenseJob";
 
     private static final DateFormatter DATE_FORMATTER = DateFormatter.forPattern("EEEE, MMMM dd, yyyy");
 
     private static final String ACKNOWLEDGEMENT_HEADER = "This license update requires acknowledgement. To acknowledge the license, " +
-            "please read the following messages and update the license again, this time with the \"acknowledge=true\" parameter:";
+        "please read the following messages and update the license again, this time with the \"acknowledge=true\" parameter:";
 
     public LicenseService(Settings settings, ClusterService clusterService, Clock clock, Environment env,
                           ResourceWatcherService resourceWatcherService, XPackLicenseState licenseState) {
@@ -126,9 +136,10 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
         this.clock = clock;
         this.scheduler = new SchedulerEngine(settings, clock);
         this.licenseState = licenseState;
+        this.allowedLicenseTypes = ALLOWED_LICENSE_TYPES_SETTING.get(settings);
         this.operationModeFileWatcher = new OperationModeFileWatcher(resourceWatcherService,
             XPackPlugin.resolveConfigFile(env, "license_mode"), logger,
-            () -> updateLicenseState(getLicensesMetaData()));
+            () -> updateLicenseState(getLicensesMetadata()));
         this.scheduler.register(this);
         populateExpirationCallbacks();
     }
@@ -199,8 +210,20 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
         final long now = clock.millis();
         if (!LicenseVerifier.verifyLicense(newLicense) || newLicense.issueDate() > now || newLicense.startDate() > now) {
             listener.onResponse(new PutLicenseResponse(true, LicensesStatus.INVALID));
-        } else if (newLicense.type().equals("basic")) {
+            return;
+        }
+        final License.LicenseType licenseType;
+        try {
+            licenseType = License.LicenseType.resolve(newLicense);
+        } catch (Exception e) {
+            listener.onFailure(e);
+            return;
+        }
+        if (licenseType == License.LicenseType.BASIC) {
             listener.onFailure(new IllegalArgumentException("Registering basic licenses is not allowed."));
+        } else if (isAllowedLicenseType(licenseType) == false) {
+            listener.onFailure(new IllegalArgumentException(
+                "Registering [" + licenseType.getTypeName() + "] licenses is not allowed on this cluster"));
         } else if (newLicense.expiryDate() < now) {
             listener.onResponse(new PutLicenseResponse(true, LicensesStatus.EXPIRED));
         } else {
@@ -212,7 +235,7 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
                     if (acknowledgeMessages.isEmpty() == false) {
                         // needs acknowledgement
                         listener.onResponse(new PutLicenseResponse(false, LicensesStatus.VALID, ACKNOWLEDGEMENT_HEADER,
-                                acknowledgeMessages));
+                            acknowledgeMessages));
                         return;
                     }
                 }
@@ -231,44 +254,58 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
                     throw new IllegalStateException("Cannot install a [" + newLicense.operationMode() +
                         "] license unless TLS is configured or security is disabled");
                 } else if (XPackSettings.FIPS_MODE_ENABLED.get(settings)
-                    && newLicense.operationMode() != License.OperationMode.PLATINUM
-                    && newLicense.operationMode() != License.OperationMode.TRIAL) {
+                    && false == XPackLicenseState.isFipsAllowedForOperationMode(newLicense.operationMode())) {
                     throw new IllegalStateException("Cannot install a [" + newLicense.operationMode() +
                         "] license unless FIPS mode is disabled");
                 }
             }
 
             clusterService.submitStateUpdateTask("register license [" + newLicense.uid() + "]", new
-                    AckedClusterStateUpdateTask<PutLicenseResponse>(request, listener) {
-                        @Override
-                        protected PutLicenseResponse newResponse(boolean acknowledged) {
-                            return new PutLicenseResponse(acknowledged, LicensesStatus.VALID);
-                        }
+                AckedClusterStateUpdateTask<PutLicenseResponse>(request, listener) {
+                    @Override
+                    protected PutLicenseResponse newResponse(boolean acknowledged) {
+                        return new PutLicenseResponse(acknowledged, LicensesStatus.VALID);
+                    }
 
-                        @Override
-                        public ClusterState execute(ClusterState currentState) throws Exception {
-                            XPackPlugin.checkReadyForXPackCustomMetadata(currentState);
-                            MetaData currentMetadata = currentState.metaData();
-                            LicensesMetaData licensesMetaData = currentMetadata.custom(LicensesMetaData.TYPE);
-                            Version trialVersion = null;
-                            if (licensesMetaData != null) {
-                                trialVersion = licensesMetaData.getMostRecentTrialVersion();
-                            }
-                            MetaData.Builder mdBuilder = MetaData.builder(currentMetadata);
-                            mdBuilder.putCustom(LicensesMetaData.TYPE, new LicensesMetaData(newLicense, trialVersion));
-                            return ClusterState.builder(currentState).metaData(mdBuilder).build();
+                    @Override
+                    public ClusterState execute(ClusterState currentState) throws Exception {
+                        XPackPlugin.checkReadyForXPackCustomMetadata(currentState);
+                        final Version oldestNodeVersion = currentState.nodes().getSmallestNonClientNodeVersion();
+                        if (licenseIsCompatible(newLicense, oldestNodeVersion) == false) {
+                            throw new IllegalStateException("The provided license is not compatible with node version [" +
+                                oldestNodeVersion + "]");
                         }
-                    });
+                        Metadata currentMetadata = currentState.metadata();
+                        LicensesMetadata licensesMetadata = currentMetadata.custom(LicensesMetadata.TYPE);
+                        Version trialVersion = null;
+                        if (licensesMetadata != null) {
+                            trialVersion = licensesMetadata.getMostRecentTrialVersion();
+                        }
+                        Metadata.Builder mdBuilder = Metadata.builder(currentMetadata);
+                        mdBuilder.putCustom(LicensesMetadata.TYPE, new LicensesMetadata(newLicense, trialVersion));
+                        return ClusterState.builder(currentState).metadata(mdBuilder).build();
+                    }
+                });
         }
+    }
+
+    private static boolean licenseIsCompatible(License license, Version version) {
+        final int maxVersion = LicenseUtils.getMaxLicenseVersion(version);
+        return license.version() <= maxVersion;
+    }
+
+    private boolean isAllowedLicenseType(License.LicenseType type) {
+        logger.debug("Checking license [{}] against allowed license types: {}", type, allowedLicenseTypes);
+        return allowedLicenseTypes.contains(type);
     }
 
     public static Map<String, String[]> getAckMessages(License newLicense, License currentLicense) {
         Map<String, String[]> acknowledgeMessages = new HashMap<>();
         if (!License.isAutoGeneratedLicense(currentLicense.signature()) // current license is not auto-generated
-                && currentLicense.issueDate() > newLicense.issueDate()) { // and has a later issue date
-            acknowledgeMessages.put("license", new String[]{
-                    "The new license is older than the currently installed license. " +
-                            "Are you sure you want to override the current license?"});
+            && currentLicense.issueDate() > newLicense.issueDate()) { // and has a later issue date
+            acknowledgeMessages.put("license", new String[] {
+                "The new license is older than the currently installed license. " +
+                    "Are you sure you want to override the current license?" });
         }
         XPackLicenseState.ACKNOWLEDGMENT_MESSAGES.forEach((feature, ackMessages) -> {
             String[] messages = ackMessages.apply(currentLicense.operationMode(), newLicense.operationMode());
@@ -286,15 +323,15 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
 
     @Override
     public void triggered(SchedulerEngine.Event event) {
-        final LicensesMetaData licensesMetaData = getLicensesMetaData();
-        if (licensesMetaData != null) {
-            final License license = licensesMetaData.getLicense();
+        final LicensesMetadata licensesMetadata = getLicensesMetadata();
+        if (licensesMetadata != null) {
+            final License license = licensesMetadata.getLicense();
             if (event.getJobName().equals(LICENSE_JOB)) {
-                updateLicenseState(license, licensesMetaData.getMostRecentTrialVersion());
+                updateLicenseState(license, licensesMetadata.getMostRecentTrialVersion());
             } else if (event.getJobName().startsWith(ExpirationCallback.EXPIRATION_JOB_PREFIX)) {
                 expirationCallbacks.stream()
-                        .filter(expirationCallback -> expirationCallback.getId().equals(event.getJobName()))
-                        .forEach(expirationCallback -> expirationCallback.on(license));
+                    .filter(expirationCallback -> expirationCallback.getId().equals(event.getJobName()))
+                    .forEach(expirationCallback -> expirationCallback.on(license));
             }
         }
     }
@@ -302,44 +339,26 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
     /**
      * Remove license from the cluster state metadata
      */
-    public void removeLicense(final DeleteLicenseRequest request, final ActionListener<ClusterStateUpdateResponse> listener) {
+    public void removeLicense(final DeleteLicenseRequest request, final ActionListener<PostStartBasicResponse> listener) {
+        final PostStartBasicRequest startBasicRequest = new PostStartBasicRequest().acknowledge(true);
         clusterService.submitStateUpdateTask("delete license",
-                new AckedClusterStateUpdateTask<ClusterStateUpdateResponse>(request, listener) {
-                    @Override
-                    protected ClusterStateUpdateResponse newResponse(boolean acknowledged) {
-                        return new ClusterStateUpdateResponse(acknowledged);
-                    }
-
-                    @Override
-                    public ClusterState execute(ClusterState currentState) throws Exception {
-                        MetaData metaData = currentState.metaData();
-                        final LicensesMetaData currentLicenses = metaData.custom(LicensesMetaData.TYPE);
-                        if (currentLicenses.getLicense() != LicensesMetaData.LICENSE_TOMBSTONE) {
-                            MetaData.Builder mdBuilder = MetaData.builder(currentState.metaData());
-                            LicensesMetaData newMetadata = new LicensesMetaData(LicensesMetaData.LICENSE_TOMBSTONE,
-                                    currentLicenses.getMostRecentTrialVersion());
-                            mdBuilder.putCustom(LicensesMetaData.TYPE, newMetadata);
-                            return ClusterState.builder(currentState).metaData(mdBuilder).build();
-                        } else {
-                            return currentState;
-                        }
-                    }
-                });
+            new StartBasicClusterTask(logger, clusterService.getClusterName().value(), clock, startBasicRequest, listener));
     }
 
     public License getLicense() {
-        final License license = getLicense(clusterService.state().metaData());
-        return license == LicensesMetaData.LICENSE_TOMBSTONE ? null : license;
+        final License license = getLicense(clusterService.state().metadata());
+        return license == LicensesMetadata.LICENSE_TOMBSTONE ? null : license;
     }
 
-    private LicensesMetaData getLicensesMetaData() {
-        return this.clusterService.state().metaData().custom(LicensesMetaData.TYPE);
+    private LicensesMetadata getLicensesMetadata() {
+        return this.clusterService.state().metadata().custom(LicensesMetadata.TYPE);
     }
 
     void startTrialLicense(PostStartTrialRequest request, final ActionListener<PostStartTrialResponse> listener) {
-        if (VALID_TRIAL_TYPES.contains(request.getType()) == false) {
-            throw new IllegalArgumentException("Cannot start trial of type [" + request.getType() + "]. Valid trial types are "
-                    + VALID_TRIAL_TYPES + ".");
+        License.LicenseType requestedType = License.LicenseType.parse(request.getType());
+        if (VALID_TRIAL_TYPES.contains(requestedType) == false) {
+            throw new IllegalArgumentException("Cannot start trial of type [" + requestedType.getTypeName() + "]. Valid trial types are ["
+                + VALID_TRIAL_TYPES.stream().map(License.LicenseType::getTypeName).sorted().collect(Collectors.joining(",")) + "]");
         }
         StartTrialClusterTask task = new StartTrialClusterTask(logger, clusterService.getClusterName().value(), clock, request, listener);
         clusterService.submitStateUpdateTask("started trial license", task);
@@ -358,7 +377,7 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
      */
     private void registerOrUpdateSelfGeneratedLicense() {
         clusterService.submitStateUpdateTask("maybe generate license for cluster",
-                new StartupSelfGeneratedLicenseTask(settings, clock, clusterService));
+            new StartupSelfGeneratedLicenseTask(settings, clock, clusterService));
     }
 
     @Override
@@ -369,11 +388,11 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
         if (clusterService.lifecycleState() == Lifecycle.State.STARTED) {
             final ClusterState clusterState = clusterService.state();
             if (clusterState.blocks().hasGlobalBlock(GatewayService.STATE_NOT_RECOVERED_BLOCK) == false &&
-                    clusterState.nodes().getMasterNode() != null && XPackPlugin.isReadyForXPackCustomMetadata(clusterState)) {
-                final LicensesMetaData currentMetaData = clusterState.metaData().custom(LicensesMetaData.TYPE);
-                boolean noLicense = currentMetaData == null || currentMetaData.getLicense() == null;
+                clusterState.nodes().getMasterNode() != null && XPackPlugin.isReadyForXPackCustomMetadata(clusterState)) {
+                final LicensesMetadata currentMetadata = clusterState.metadata().custom(LicensesMetadata.TYPE);
+                boolean noLicense = currentMetadata == null || currentMetadata.getLicense() == null;
                 if (clusterState.getNodes().isLocalNodeElectedMaster() &&
-                        (noLicense || LicenseUtils.licenseNeedsExtended(currentMetaData.getLicense()))) {
+                    (noLicense || LicenseUtils.licenseNeedsExtended(currentMetadata.getLicense()))) {
                     // triggers a cluster changed event eventually notifying the current licensee
                     registerOrUpdateSelfGeneratedLicense();
                 }
@@ -408,38 +427,38 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
                 return;
             }
 
-            final LicensesMetaData prevLicensesMetaData = previousClusterState.getMetaData().custom(LicensesMetaData.TYPE);
-            final LicensesMetaData currentLicensesMetaData = currentClusterState.getMetaData().custom(LicensesMetaData.TYPE);
+            final LicensesMetadata prevLicensesMetadata = previousClusterState.getMetadata().custom(LicensesMetadata.TYPE);
+            final LicensesMetadata currentLicensesMetadata = currentClusterState.getMetadata().custom(LicensesMetadata.TYPE);
             if (logger.isDebugEnabled()) {
-                logger.debug("previous [{}]", prevLicensesMetaData);
-                logger.debug("current [{}]", currentLicensesMetaData);
+                logger.debug("previous [{}]", prevLicensesMetadata);
+                logger.debug("current [{}]", currentLicensesMetadata);
             }
             // notify all interested plugins
             if (previousClusterState.blocks().hasGlobalBlock(GatewayService.STATE_NOT_RECOVERED_BLOCK)
-                    || prevLicensesMetaData == null) {
-                if (currentLicensesMetaData != null) {
-                    onUpdate(currentLicensesMetaData);
+                || prevLicensesMetadata == null) {
+                if (currentLicensesMetadata != null) {
+                    onUpdate(currentLicensesMetadata);
                 }
-            } else if (!prevLicensesMetaData.equals(currentLicensesMetaData)) {
-                onUpdate(currentLicensesMetaData);
+            } else if (!prevLicensesMetadata.equals(currentLicensesMetadata)) {
+                onUpdate(currentLicensesMetadata);
             }
 
             License currentLicense = null;
-            boolean noLicenseInPrevMetadata = prevLicensesMetaData == null || prevLicensesMetaData.getLicense() == null;
+            boolean noLicenseInPrevMetadata = prevLicensesMetadata == null || prevLicensesMetadata.getLicense() == null;
             if (noLicenseInPrevMetadata == false) {
-                currentLicense = prevLicensesMetaData.getLicense();
+                currentLicense = prevLicensesMetadata.getLicense();
             }
-            boolean noLicenseInCurrentMetadata = (currentLicensesMetaData == null || currentLicensesMetaData.getLicense() == null);
+            boolean noLicenseInCurrentMetadata = (currentLicensesMetadata == null || currentLicensesMetadata.getLicense() == null);
             if (noLicenseInCurrentMetadata == false) {
-                currentLicense = currentLicensesMetaData.getLicense();
+                currentLicense = currentLicensesMetadata.getLicense();
             }
 
             boolean noLicense = noLicenseInPrevMetadata && noLicenseInCurrentMetadata;
             // auto-generate license if no licenses ever existed or if the current license is basic and
             // needs extended or if the license signature needs to be updated. this will trigger a subsequent cluster changed event
             if (currentClusterState.getNodes().isLocalNodeElectedMaster() &&
-                    (noLicense || LicenseUtils.licenseNeedsExtended(currentLicense) ||
-                        LicenseUtils.signatureNeedsUpdate(currentLicense, currentClusterState.nodes()))) {
+                (noLicense || LicenseUtils.licenseNeedsExtended(currentLicense) ||
+                    LicenseUtils.signatureNeedsUpdate(currentLicense, currentClusterState.nodes()))) {
                 registerOrUpdateSelfGeneratedLicense();
             }
         } else if (logger.isDebugEnabled()) {
@@ -447,14 +466,14 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
         }
     }
 
-    private void updateLicenseState(LicensesMetaData licensesMetaData) {
-        if (licensesMetaData != null) {
-            updateLicenseState(getLicense(licensesMetaData), licensesMetaData.getMostRecentTrialVersion());
+    private void updateLicenseState(LicensesMetadata licensesMetadata) {
+        if (licensesMetadata != null) {
+            updateLicenseState(getLicense(licensesMetadata), licensesMetadata.getMostRecentTrialVersion());
         }
     }
 
     protected void updateLicenseState(final License license, Version mostRecentTrialVersion) {
-        if (license == LicensesMetaData.LICENSE_TOMBSTONE) {
+        if (license == LicensesMetadata.LICENSE_TOMBSTONE) {
             // implies license has been explicitly deleted
             licenseState.update(License.OperationMode.MISSING, false, mostRecentTrialVersion);
             return;
@@ -485,12 +504,12 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
 
     /**
      * Notifies registered licensees of license state change and/or new active license
-     * based on the license in <code>currentLicensesMetaData</code>.
+     * based on the license in <code>currentLicensesMetadata</code>.
      * Additionally schedules license expiry notifications and event callbacks
      * relative to the current license's expiry
      */
-    private void onUpdate(final LicensesMetaData currentLicensesMetaData) {
-        final License license = getLicense(currentLicensesMetaData);
+    private void onUpdate(final LicensesMetadata currentLicensesMetadata) {
+        final License license = getLicense(currentLicensesMetadata);
         // license can be null if the trial license is yet to be auto-generated
         // in this case, it is a no-op
         if (license != null) {
@@ -501,17 +520,17 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
                 scheduler.add(new SchedulerEngine.Job(LICENSE_JOB, nextLicenseCheck(license)));
                 for (ExpirationCallback expirationCallback : expirationCallbacks) {
                     scheduler.add(new SchedulerEngine.Job(expirationCallback.getId(),
-                            (startTime, now) ->
-                                    expirationCallback.nextScheduledTimeForExpiry(license.expiryDate(), startTime, now)));
+                        (startTime, now) ->
+                            expirationCallback.nextScheduledTimeForExpiry(license.expiryDate(), startTime, now)));
                 }
                 if (previousLicense != null) {
                     // remove operationModeFileWatcher to gc the old license object
                     previousLicense.removeOperationModeFileWatcher();
                 }
                 logger.info("license [{}] mode [{}] - valid", license.uid(),
-                        license.operationMode().name().toLowerCase(Locale.ROOT));
+                    license.operationMode().name().toLowerCase(Locale.ROOT));
             }
-            updateLicenseState(license, currentLicensesMetaData.getMostRecentTrialVersion());
+            updateLicenseState(license, currentLicensesMetadata.getMostRecentTrialVersion());
         }
     }
 
@@ -534,20 +553,20 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
         };
     }
 
-    public static License getLicense(final MetaData metaData) {
-        final LicensesMetaData licensesMetaData = metaData.custom(LicensesMetaData.TYPE);
-        return getLicense(licensesMetaData);
+    public static License getLicense(final Metadata metadata) {
+        final LicensesMetadata licensesMetadata = metadata.custom(LicensesMetadata.TYPE);
+        return getLicense(licensesMetadata);
     }
 
-    static License getLicense(final LicensesMetaData metaData) {
-        if (metaData != null) {
-            License license = metaData.getLicense();
-            if (license == LicensesMetaData.LICENSE_TOMBSTONE) {
+    static License getLicense(final LicensesMetadata metadata) {
+        if (metadata != null) {
+            License license = metadata.getLicense();
+            if (license == LicensesMetadata.LICENSE_TOMBSTONE) {
                 return license;
             } else if (license != null) {
                 boolean autoGeneratedLicense = License.isAutoGeneratedLicense(license.signature());
                 if ((autoGeneratedLicense && SelfGeneratedLicense.verify(license))
-                        || (!autoGeneratedLicense && LicenseVerifier.verifyLicense(license))) {
+                    || (!autoGeneratedLicense && LicenseVerifier.verifyLicense(license))) {
                     return license;
                 }
             }
@@ -562,5 +581,21 @@ public class LicenseService extends AbstractLifecycleComponent implements Cluste
 
     private static boolean isBoundToLoopback(DiscoveryNode localNode) {
         return localNode.getAddress().address().getAddress().isLoopbackAddress();
+    }
+
+    private static List<License.LicenseType> getAllowableUploadTypes() {
+        return Stream.of(License.LicenseType.values())
+            .filter(t -> t != License.LicenseType.BASIC)
+            .collect(Collectors.toUnmodifiableList());
+    }
+
+    private static void validateUploadTypesSetting(List<License.LicenseType> value) {
+        if (ALLOWABLE_UPLOAD_TYPES.containsAll(value) == false) {
+            throw new IllegalArgumentException("Invalid value [" +
+                value.stream().map(License.LicenseType::getTypeName).collect(Collectors.joining(",")) +
+                "] for " + ALLOWED_LICENSE_TYPES_SETTING.getKey() + ", allowed values are [" +
+                ALLOWABLE_UPLOAD_TYPES.stream().map(License.LicenseType::getTypeName).collect(Collectors.joining(",")) +
+                "]");
+        }
     }
 }
