@@ -15,8 +15,8 @@ import org.elasticsearch.common.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Objects;
 
 /**
  * An authenticated user
@@ -33,11 +33,11 @@ public class User implements ToXContentObject {
     @Nullable private final String email;
 
     public User(String username, String... roles) {
-        this(username, roles, null, null, null, true);
+        this(username, roles, null, null, Map.of(), true);
     }
 
     public User(String username, String[] roles, User authenticatedUser) {
-        this(username, roles, null, null, null, true, authenticatedUser);
+        this(username, roles, null, null, Map.of(), true, authenticatedUser);
     }
 
     public User(User user, User authenticatedUser) {
@@ -50,9 +50,9 @@ public class User implements ToXContentObject {
 
     private User(String username, String[] roles, String fullName, String email, Map<String, Object> metadata, boolean enabled,
                 User authenticatedUser) {
-        this.username = username;
+        this.username = Objects.requireNonNull(username);
         this.roles = roles == null ? Strings.EMPTY_ARRAY : roles;
-        this.metadata = metadata != null ? Collections.unmodifiableMap(metadata) : Collections.emptyMap();
+        this.metadata = metadata == null ? Map.of() : metadata;
         this.fullName = fullName;
         this.email = email;
         this.enabled = enabled;
